# Doraemon

./: .env.example  .gitignore  NEXTJS_QUICKSTART.md  QUICKSTART.md  README.md  README_WEB.md  config.py  main.py  migrate_db.py  pyproject.toml  restart_bot.sh
channels/: base.py  telegram.py
channels/web/: __init__.py  app.py  auth.py  models.py  routes.py  websocket.py
core/: message_handler.py
docs/: COMPLETE_IMPLEMENTATION_SUMMARY.md  FIX_STATUS.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  NEXTJS_IMPLEMENTATION.md  NEXTJS_VERIFICATION.md  QUICKSTART_SMART_FILTER.md  architecture.md  claudecode-env-var.md  lock-vs-queue.md  phase2-design.md  process-mechanism.md  queue-migration-complete.md  smart-reply-filter-summary.md  smart-reply-filter.md  troubleshooting.md  usage-guide.md
frontend/: index.html
frontend-next/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend-next/app/: globals.css  layout.tsx
frontend-next/components/: CommandPalette.tsx  ShortcutsDialog.tsx  ThemeToggle.tsx
frontend-next/hooks/: useKeyboardShortcuts.ts  useWebSocket.ts
frontend-next/types/: api.ts  (+1 more)
scripts/: cleanup_sessions.py  migrate_to_multichannel.py  restart_backend.sh  restart_bot.sh  serve_frontend.py  start_all.sh  start_nextjs.sh  stop_bot.sh
services/: claude_code.py  claude_code_lock.py.bak  memory.py  user_profile.py
storage/: database.py  models.py
tests/: test_api.sh  test_e2e_smart_filter.py  test_final_response.py  test_streaming.py  test_web.py  test_web_server.py  test_websocket.py  test_ws_simple.py
utils/: logger.py
(+12 files in other folders)
